--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-*{
+html,
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 a {
   text-decoration: none;
   color: black;
@@ -23,11 +25,49 @@ a {
   background-color: transparent;
 }
 
+
+.react-player {
+  height: 77vh !important;
+  width: 100% !important;
+}
+
 .search-bar{
   border:none;
   outline:none;
   width:350px;
 }
+
+.category-btn{
+  font-weight: bold !important;
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  cursor:pointer;
+  background: transparent;
+  outline: none;
+  border: none;
+  padding: 7px 15px;
+  margin: 10px 0px;
+  border-radius: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
+.category-btn:hover {
+  background-color: #FC1503 !important;
+  color: white !important;
+}
+
+.category-btn:hover span{
+  color: white !important;
+}
+
+@media screen and (max-width: 900px) {
+  .category-btn{
+    margin: 10px;
+  }
+}
+
 @media screen and (max-width:800px){
   .copyright{
     display:none !important;
